NetBSD Problem Report #49231

From gson@gson.org  Sun Sep 21 10:59:36 2014
Return-Path: <gson@gson.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id E6FF3A6BD9
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 21 Sep 2014 10:59:36 +0000 (UTC)
Message-Id: <20140921105924.3692E75E3A@guava.gson.org>
Date: Sun, 21 Sep 2014 13:59:24 +0300 (EEST)
From: gson@gson.org (Andreas Gustafsson)
Reply-To: gson@gson.org (Andreas Gustafsson)
To: gnats-bugs@gnats.NetBSD.org
Subject: Recent regressions in IPv4-only sysinst network install
X-Send-Pr-Version: 3.95

>Number:         49231
>Category:       install
>Synopsis:       Recent regressions in IPv4-only sysinst network install
>Confidential:   no
>Severity:       serious
>Priority:       high
>Responsible:    install-manager
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Sep 21 11:00:00 +0000 2014
>Closed-Date:    Tue Sep 23 14:11:24 +0000 2014
>Last-Modified:  Wed May 13 17:05:00 +0000 2015
>Originator:     Andreas Gustafsson
>Release:        NetBSD-current, source date 2014.09.20.15.10.41
>Organization:
>Environment:
System: NetBSD
Architecture: amd64
Machine: x86_64
>Description:

I am trying to install NetBSD-current using sysinst, fetching the
distribution sets by HTTP over IPv4.  This worked before, but
some time during the recent one-month period when sysinst was
broken for unrelated reasons (PR 49128), the problems described
below appeared.  Perhaps they were introduced by the commits to
sysinst/net.c (and others) by roy on September 12.

I'm answering "no" to the "Perform autoconfiguration?" question and
configuring the network manually.  The HTTP server holding the
distribution sets is specified by its numeric IPv4 address rather than
by domain name; things may fail differently (and earlier) if a domain
name is used.

I do not have IPv6 connectivity at this location.

Problem 1: sysinst asks for an IPv6 DNS server even though I don't
have an IPv6 network.  Since there was no obvious way to answer
"none", I just chose the first option displayed
(google-public-dns-a.google.com).

Problem 2: sysinst never asks for an IP4 DNS server.

Problem 3: sysinst runs ping6 to check if the network is up,
even though I don't have an IPv6 network.  As one might expect,
this fails.

Problem 4: sysinst never runs ping to checks if the IPv4 network is
up.  I think this is because in config_network(), the variable
network_up is set to false due to ping6 failing, and the ping
invocation is within "if (... & network_up)".

Problem 5: Sysinst no longer asks the question "Is the network
information you entered accurate for this machine in regular operation
and do you want it installed in /etc?", and no longer installs the
network configuration on the target machine.  I think this is also
because network_up is false, which causes mnt_net_config() to return
immediately.

Despite all this, sysinst successfully downloads and untars the
distribution sets and completes the installation, and never issues
any error messages other than the one about the failed ping6.  The
problems only really become apparent when you boot the installed
system and find that the network has not been configured.

>How-To-Repeat:

Do an IPv4-only network install using sysinst.  If successful, boot
the installed system and try to use the network.

>Fix:

>Release-Note:

>Audit-Trail:
From: "Roy Marples" <roy@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/49231 CVS commit: src/usr.sbin/sysinst
Date: Mon, 22 Sep 2014 18:47:41 +0000

 Module Name:	src
 Committed By:	roy
 Date:		Mon Sep 22 18:47:41 UTC 2014

 Modified Files:
 	src/usr.sbin/sysinst: net.c

 Log Message:
 Remove the ping6 ff02::2 test, it looks pretty pointless.
 dhcpcd will ensure the IPv6 network is up before forking.
 ping the IPv4 default route before the nameserver as the nameserver
 could be over the default route anyway.

 Fixes the core issue with PR install/49231.


 To generate a diff of this commit:
 cvs rdiff -u -r1.15 -r1.16 src/usr.sbin/sysinst/net.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Roy Marples" <roy@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/49231 CVS commit: src/usr.sbin/sysinst
Date: Mon, 22 Sep 2014 19:01:02 +0000

 Module Name:	src
 Committed By:	roy
 Date:		Mon Sep 22 19:01:02 UTC 2014

 Modified Files:
 	src/usr.sbin/sysinst: menus.mi msg.mi.de msg.mi.en msg.mi.es msg.mi.fr
 	    msg.mi.pl

 Log Message:
 Change the IPv6 DNS selection to use DNS selection and add the
 Google Public V4 DNS servers to the list.
 The other field can take an IPv4 or IPv6 name server of choice.
 Fixes PR install/49231.


 To generate a diff of this commit:
 cvs rdiff -u -r1.5 -r1.6 src/usr.sbin/sysinst/menus.mi
 cvs rdiff -u -r1.4 -r1.5 src/usr.sbin/sysinst/msg.mi.de \
     src/usr.sbin/sysinst/msg.mi.en src/usr.sbin/sysinst/msg.mi.es \
     src/usr.sbin/sysinst/msg.mi.fr src/usr.sbin/sysinst/msg.mi.pl

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: gson@NetBSD.org
State-Changed-When: Tue, 23 Sep 2014 14:11:24 +0000
State-Changed-Why:
Roy fixed it.


From: "Soren Jacobsen" <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/49231 CVS commit: [netbsd-7] src/usr.sbin/sysinst
Date: Wed, 13 May 2015 17:04:27 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Wed May 13 17:04:27 UTC 2015

 Modified Files:
 	src/usr.sbin/sysinst [netbsd-7]: menus.mi msg.mi.de msg.mi.en msg.mi.es
 	    msg.mi.fr msg.mi.pl

 Log Message:
 Pull up following revision(s) (requested by martin in ticket #754):
 	usr.sbin/sysinst/menus.mi: revision 1.6
 	usr.sbin/sysinst/msg.mi.de: revision 1.5
 	usr.sbin/sysinst/msg.mi.en: revision 1.5
 	usr.sbin/sysinst/msg.mi.es: revision 1.5
 	usr.sbin/sysinst/msg.mi.fr: revision 1.5
 	usr.sbin/sysinst/msg.mi.pl: revision 1.5
 Change the IPv6 DNS selection to use DNS selection and add the
 Google Public V4 DNS servers to the list.
 The other field can take an IPv4 or IPv6 name server of choice.
 Fixes PR install/49231.


 To generate a diff of this commit:
 cvs rdiff -u -r1.4.4.2 -r1.4.4.3 src/usr.sbin/sysinst/menus.mi
 cvs rdiff -u -r1.2.4.1 -r1.2.4.2 src/usr.sbin/sysinst/msg.mi.de \
     src/usr.sbin/sysinst/msg.mi.es src/usr.sbin/sysinst/msg.mi.fr
 cvs rdiff -u -r1.2.4.4 -r1.2.4.5 src/usr.sbin/sysinst/msg.mi.en
 cvs rdiff -u -r1.2.4.3 -r1.2.4.4 src/usr.sbin/sysinst/msg.mi.pl

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.