Remove the ping6 ff02::2 test, it looks pretty pointless. dhcpcd will ensure the IPv6 network is up before forking. ping the IPv4 default route before the nameserver as the nameserver could be over the default route anyway.

Fixes the core issue with PR install/49231.